src/test/deca/context/valid/auto/valid/test33.deca
{
float b;
int x;
float x2 = (5 * 73.6);
boolean x5;
x = (2226 % 3) * (55861 % 9987);
printlnx((1 - 2226) / (9 / 7) + (3 % 2) - (2149 + 3) * (2149 * 8), (2226 / 0) / (7 % 3) * (x + 6) - (3 - 2226));
print("groupe 53");
}
