src/test/deca/context/invalid/CastToInt.deca
{
    float x  = 2020.0f;
    int y = (int) x;
    print("y= ",y);
}